--- a/project/package.json
+++ b/project/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "axios": "^1.8.3",
     "clsx": "^2.1.0",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
