--- a/project/backend/.env.example
+++ b/project/backend/.env.example
@@ -1,16 +1,16 @@
 # Database Configuration
-DATABASE_URL="mysql://user:password@localhost:3306/amasimbi?connection_limit=5"
+DATABASE_URL="mysql://user:password@localhost:3306/amasimbi"
 
 # JWT Configuration
 JWT_SECRET="your-super-secret-key-here"
 JWT_EXPIRES_IN="7d"
 
 # Server Configuration
-PORT=3000
-NODE_ENV="development"
+PORT=3001
+NODE_ENV="production"
 
 # CORS Configuration
-FRONTEND_URL="http://localhost:5173"
+FRONTEND_URL="https://your-frontend-domain.com"
 
 # File Upload Configuration
 MAX_FILE_SIZE=5242880 # 5MB in bytes
