--- a/project/backend/package.json
+++ b/project/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "amasimbi-backend",
   "version": "1.0.0",
-  "description": "Backend for Amasimbi community platform",
+  "description": "Backend for Amasimbi learning platform",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
@@ -10,25 +10,30 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate deploy"
+    "prisma:migrate": "prisma migrate deploy",
+    "prisma:studio": "prisma studio",
+    "deploy": "npm run build && npm run prisma:generate && npm run prisma:migrate && npm start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.6.0",
     "@prisma/client": "^5.10.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "serverless-http": "^3.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.9",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.19",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
