--- a/project/backend/package.json
+++ b/project/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "amasimbi-backend",
   "version": "1.0.0",
-  "description": "Backend for Amasimbi community platform",
+  "description": "Backend for AMASIMBI - Reproductive Health Education Platform",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
@@ -10,18 +10,22 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate deploy"
+    "prisma:migrate": "prisma migrate deploy",
+    "prisma:studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.10.0",
+    "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
