--- a/project/.env
+++ b/project/.env
@@ -1,20 +1,20 @@
 # Frontend Environment Variables
-VITE_API_URL=http://localhost:5001
+VITE_API_URL=http://localhost:3000/api
 VITE_APP_NAME=AMASIMBI
 
 # Backend Environment Variables
-PORT=5001
+PORT=3000
 NODE_ENV=development
 
 # Database
 DATABASE_URL="mysql://root:password@localhost:3306/amasimbi?connection_limit=5&authentication_plugin=mysql_native_password"
 
 # Authentication
-JWT_SECRET="your-secret-key-here"
+JWT_SECRET=your-super-secret-key-here
 JWT_EXPIRES_IN=7d
-REFRESH_TOKEN_SECRET="your-refresh-token-secret-here"
-REFRESH_TOKEN_EXPIRES_IN=30d
+REFRESH_TOKEN_SECRET=your-refresh-token-secret-change-this-in-production
+REFRESH_TOKEN_EXPIRES_IN=7d
 
 # File Upload
-UPLOAD_DIR="uploads"
+UPLOAD_DIR=uploads
 MAX_FILE_SIZE=5242880 # 5MB
