--- a/project/.env
+++ b/project/.env
@@ -1,6 +1,7 @@
 # Frontend Environment Variables
 VITE_API_URL=http://localhost:3000/api
 VITE_APP_NAME=AMASIMBI
+VITE_JWT_SECRET=amasimbi-super-secret-key-2024
 
 # Backend Environment Variables
 PORT=3000
